Source/WebCore/platform/graphics/filters/FilterOperations.h
@@ -69,6 +69,9 @@ public:
     bool hasFilterThatAffectsOpacity() const;
     bool hasFilterThatMovesPixels() const;
 
+#if ENABLE(CSS_SHADERS)
+    bool hasCustomFilter() const;
+#endif
 private:
     Vector<RefPtr<FilterOperation> > m_operations;
 };
